--- a/GreenThumb/Windows/MyGardenWindow.xaml
+++ b/GreenThumb/Windows/MyGardenWindow.xaml
@@ -5,8 +5,44 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GreenThumb.Windows"
         mc:Ignorable="d"
-        Title="MyGardenWindow" Height="450" Width="800">
+        Title="MyGardenWindow" Height="450" Width="500">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="20"/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition Height="20"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="20"/>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="20"/>
+        </Grid.ColumnDefinitions>
+        <Button
+         Name="btnBack"
+          HorizontalAlignment="Right"
+          VerticalAlignment="Center"
+         Margin="30 0"
+          Padding="10"
+          FontSize="15"
+          Content="Back"
+          Grid.Row="4"
+          Grid.Column="1" Click="btnBack_Click"  />
+        <Label
+             VerticalAlignment="Center"
+             HorizontalAlignment="Center"
+             FontSize="50"
+             Content="Garden"
+             Grid.Column="1"
+             Grid.Row="1"
+             Grid.ColumnSpan="2"/>
+        <ListView
+             Name="lstGardenPlants"
+             Grid.Row="2"
+             Grid.Column="1"
+             Grid.RowSpan="2"/>
         
     </Grid>
 </Window>
