--- a/GreenThumb/Windows/AddGardenwindow.xaml
+++ b/GreenThumb/Windows/AddGardenwindow.xaml
@@ -5,13 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GreenThumb.Windows"
         mc:Ignorable="d"
-        Title="AddGardenwindow" Height="450" Width="450">
+        Title="AddGardenwindow" Height="450" Width="450" Background="ForestGreen">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="20"/>
             <RowDefinition/>
             <RowDefinition/>
-            <RowDefinition/>
+
             <RowDefinition/>
             <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
@@ -42,20 +42,7 @@
       VerticalAlignment="Center"            
       Grid.Row="2"
       Grid.Column="1"/>
-        <Label
-      VerticalAlignment="Top"
-      HorizontalContentAlignment="Center"
-      Content="Green House"
-      Margin="0 10"
-      Grid.Row="3"
-      Grid.Column="1"/>
-        <CheckBox
-      Name="cbGreenhouse" 
-      HorizontalAlignment="Center"
-      VerticalAlignment="Center"            
-      Grid.Row="3"
-      Grid.Column="1"/>
-
+        
         <Button
       Name="btnaddGarden"
       HorizontalAlignment="Left"
@@ -64,7 +51,7 @@
       FontSize="15"
       Content="Add garden"
      Margin="30 0"
-      Grid.Row="4"
+      Grid.Row="3"
       Grid.Column="1" Click="btnaddGarden_Click" />
         <Button
      Name="btnBack"
@@ -74,7 +61,7 @@
       Padding="10"
       FontSize="15"
       Content="Back"
-      Grid.Row="4"
+      Grid.Row="3"
       Grid.Column="1" Click="btnBack_Click" />
     </Grid>
 </Window>
