--- a/GreenThumb/Windows/LoginWindow.xaml
+++ b/GreenThumb/Windows/LoginWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GreenThumb.Windows"
         mc:Ignorable="d"
-        Title="LoginWindow" Height="450" Width="800">
+        Title="LoginWindow" Height="450" Width="800" Background="ForestGreen">
     <Grid>
 
         <Grid.RowDefinitions>
