--- a/GreenThumb/Windows/PlantWindow.xaml
+++ b/GreenThumb/Windows/PlantWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GreenThumb.Windows"
         mc:Ignorable="d"
-        Title="PlantWindow" Height="450" Width="800">
+        Title="PlantWindow" Height="450" Width="800" Background="ForestGreen">
     <Grid>
     <Grid.RowDefinitions>
         <RowDefinition Height="20"/>
